--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Nanum Gothic', sans-serif;
 }
-::selection{
+
+::selection {
   color: #ffff;
   background: rgb(142, 73, 232);
 }
-body{
+
+body {
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
   padding: 10px;
-  background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
+  background-image: url('./background_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.wrapper{
+
+.wrapper {
   background: #fff;
   max-width: 400px;
   width: 100%;
@@ -25,17 +30,20 @@ body{
   border-radius: 5px;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
-.wrapper header{
+
+.wrapper header {
   font-size: 30px;
   font-weight: 600;
 }
-.wrapper .inputField{
+
+.wrapper .inputField {
   margin: 20px 0;
   width: 100%;
   display: flex;
   height: 45px;
 }
-.inputField input{
+
+.inputField input {
   width: 85%;
   height: 100%;
   outline: none;
@@ -45,10 +53,12 @@ body{
   padding-left: 15px;
   transition: all 0.3s ease;
 }
-.inputField input:focus{
+
+.inputField input:focus {
   border-color: #8E49E8;
 }
-.inputField button{
+
+.inputField button {
   width: 50px;
   height: 100%;
   border: none;
@@ -56,23 +66,26 @@ body{
   margin-left: 5px;
   font-size: 21px;
   outline: none;
-  background: #8E49E8;
+  background: cadetblue;
   cursor: pointer;
   border-radius: 3px;
   opacity: 0.6;
   transition: all 0.3s ease;
 }
+
 .inputField button:hover,
-.footer button:hover{
-  background: #721ce3;
+.footer button:hover {
+  background: darkslategray;
   opacity: 1;
   pointer-events: auto;
 }
-.wrapper .todoList{
+
+.wrapper .todoList {
   max-height: 250px;
   overflow-y: auto;
 }
-.todoList li{
+
+.todoList li {
   position: relative;
   list-style: none;
   height: 45px;
@@ -84,7 +97,12 @@ body{
   cursor: default;
   overflow: hidden;
 }
-.todoList li .icon{
+
+.completed {
+  text-decoration: line-through;
+}
+
+.todoList li .icon {
   position: absolute;
   right: -45px;
   background: #e74c3c;
@@ -96,17 +114,20 @@ body{
   cursor: pointer;
   transition: all 0.2s ease;
 }
-.todoList li:hover .icon{
+
+.todoList li:hover .icon {
   right: 0px;
 }
-.wrapper .footer{
+
+.wrapper .footer {
   display: flex;
   width: 100%;
   margin-top: 20px;
   align-items: center;
   justify-content: space-between;
 }
-.footer button{
+
+.footer button {
   height: 35px;
   padding: 6px 10px;
   border-radius: 3px;
@@ -116,13 +137,14 @@ body{
   font-weight: 400;
   font-size: 16px;
   margin-left: 5px;
-  background: #8E49E8;
+  background: cadetblue;
   cursor: pointer;
   user-select: none;
   opacity: 0.6;
   transition: all 0.3s ease;
 }
-.footer button.active{
+
+.footer button.active {
   opacity: 1;
   pointer-events: auto;
 }
